# Sietor

./: .gitignore  Cargo.toml  README.md
assets/shaders/: triangle.frag  triangle.vert
src/: font.rs  main.rs  renderer.rs  resources.rs  triangle.rs  window.rs
src/renderer/: buffer.rs  camera.rs  color_buffer.rs  data.rs  mod.rs  shader.rs  viewport.rs
